[project]
name = "langchain-tilores"
version = "0.2.1"
authors = [
  { name="Lukas Rieder", email="lukas@parlant.co" },
]
description = "This package contains tools to work with Tilores entity resolution database within Langchain."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["entity-resolution", "tilores", "graph-raq", "langchain", "langchain-tool"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "tilores-sdk>=0.1.0",
]
[project.optional-dependencies]
all = ["langchain-tilores[langchain]"]
langchain = ["langchain", "openai"]
test = [
  "pytest==8.3.2",
]

[project.urls]
Homepage = "https://github.com/tilotech/langchain-tilores"
Issues = "https://github.com/tilotech/langchain-tilores/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

